Fix layout on mobile

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -1,5 +1,6 @@
 .layout {
   min-height: 100vh;
+  min-height: 100svh;
   display: grid;
   grid-template-columns: 260px auto;
   grid-template-rows: auto 1fr auto;
